<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C30B0B"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/EdTxt_number1"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="550dp"
        android:autoLink="all"
        android:autoText="false"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_1"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:numeric="decimal"
        android:phoneNumber="false"
        android:text="@string/name1"
        android:textAlignment="center"
        android:textColor="#E0E0E0"
        android:textColorHint="#FFE0B2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Txt_number2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="Deprecated,LabelFor,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txt_number1"
        android:layout_width="89dp"
        android:layout_height="24dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="295dp"
        android:text="@string/numero_1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/EdTxt_number1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/Txt_enunciado"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="674dp"
        android:text="@string/calculadora"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EdTxt_number2"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="441dp"
        android:autoLink="all"
        android:autoText="true"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_2"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:text="@string/name2"
        android:textAlignment="center"
        android:textColor="#E0E0E0"
        android:textColorHint="#FFE0B2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Txt_number2"
        tools:ignore="Deprecated,LabelFor" />

    <TextView
        android:id="@+id/Txt_number2"
        android:layout_width="89dp"
        android:layout_height="24dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="295dp"
        android:text="@string/numero_1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/EdTxt_number2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EdTxt_number1"
        tools:ignore="TextSizeCheck"
        tools:text="Numero 2" />

    <Button
        android:id="@+id/btn_somar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="38dp"
        android:text="@string/soma"
        app:layout_constraintEnd_toStartOf="@+id/btn_sub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EdTxt_number2" />

    <Button
        android:id="@+id/btn_multi"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="68dp"
        android:text="@string/multiplicar"
        app:layout_constraintBottom_toTopOf="@+id/txt_result"
        app:layout_constraintEnd_toStartOf="@+id/btn_divisao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_somar" />

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="49dp"
        android:text="@string/subtrair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_somar"
        app:layout_constraintTop_toBottomOf="@+id/EdTxt_number2" />

    <Button
        android:id="@+id/btn_divisao"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="97dp"
        android:text="@string/dividir"
        app:layout_constraintBottom_toTopOf="@+id/EdTxt_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_multi"
        app:layout_constraintTop_toBottomOf="@+id/btn_sub" />

    <EditText
        android:id="@+id/EdTxt_result"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="115dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:hint="@string/edTxt_result"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_result" />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="295dp"
        android:layout_marginBottom="7dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/EdTxt_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_multi"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>